<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    android:contentDescription="@string/pmac"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoViewBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/red"
        android:text="@string/exit"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetting" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/blue"
        android:text="@string/setting"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnStart"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/green"
        android:text="@string/start"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewP" />

    <Button
        android:id="@+id/btnBlack"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black_overlay"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnExit" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/user"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_light"
        android:textColorHint="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/imgBtnS"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/holo_red_light"
        android:textColorHint="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/editTextUser"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <ImageButton
        android:id="@+id/imgBtnS"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/heart"
        android:contentDescription="@string/secret"
        android:scaleType="fitCenter"
        android:src="@drawable/heart"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imageViewP"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#0000"
        android:contentDescription="@string/pmac"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/videoViewBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/pmac1" />

    <Button
        android:id="@+id/btnVile"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="5dp"
        android:layout_height="26dp"
        android:background="@color/black_overlay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewP"
        app:layout_constraintEnd_toEndOf="@+id/imageViewP"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/imageViewP"
        app:layout_constraintTop_toTopOf="@+id/imageViewP"
        app:layout_constraintVertical_bias="0.355" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/nez"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/videoViewBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExit"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/sign" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/space" />

</androidx.constraintlayout.widget.ConstraintLayout>